Fix for email signup button on small screens

--- a/airbitz/airbitz/static/less/home.less
+++ b/airbitz/airbitz/static/less/home.less
@@ -278,6 +278,13 @@ body.home {
                 .form-control {
                     text-align: center;
                 }
+
+                .btn-lg.btn-block {
+
+                    @media (max-width: @screen-xs-max) {
+                        font-size: 15px;
+                    }
+                }
             }
         }
     }
